images/SegueCommon.css
/*********************************************************
 * Help
 *********************************************************/
	.help_text {
		border: 1px solid #111;
		margin: 5px;
		padding: 5px;
		padding-left: 10px;
		padding-right: 10px;
		font-size: smaller;
	}

/*********************************************************
 * Status | Commands | Comments | Dates | Attribution | Footer
 *********************************************************/
	.seguelinks {
		text-align: left;
		font-size: 10px;
		margin-left: 10px;
	}

	.commands {
		text-align: right;
		font-size: 10px;
		margin-right: 10px;
		padding-bottom: 3px;
	}
	
	.login {
		text-align: right; 
		margin-right: 25px; 
		margin-bottom: 3px;
		font-size: 10px;
	}
	
	.login .visitor_reg_link {
		
	}
	
	.seguefooter_left {
		text-align: left;
		font-size: 10px;
		margin-left: 10px;
		margin-top: 10px;
	}
	
	.seguefooter_right {
		text-align: right;
		font-size: 10px;
		margin-right: 10px;
		margin-top: 10px;
	}

	.breadcrumbs {
		text-align: left;
		font-size: 10px;
		margin-right: 10px;
		height: 16px;
		
	}
	
	.breadcrumbs a {
		text-decoration: none;
	}

	.breadcrumbs a:hover {
		text-decoration: underline;
	}
	
	.comments {
		float: right; 
		clear: both;
		margin-left: 10px;
		font-size: 12px;
	}

	.comment_byline {
		padding-bottom: 5px;
	}

	.history {
		float: right; 
		clear: both;
		margin-left: 10px;
		font-size: 12px;
	}
	
	.pagination_links {
		font-size: 10px;
	}
	
	.pagination_links td {
		text-align: left;
		padding-left: 10px;
		padding-right: 10px;
	}
	
	.pagination_links select {
		border: 1px solid #666666;
		font-size: 10px;
	}
	
	.attribution_line {
		float: right; 
		clear: both;
		margin-left: 10px;
		font-size: 10px;
	}	

	.no_float_spacer {
		clear: both;
		height: 0px;
	}

	.next_previous_links {
		font-weight: bold;
	}

		
/*********************************************************
 * UI1 CSS
 *********************************************************/

	.ui1_controls {
		clear: both;
		text-align: right;
		font-size: 10px;
	}

	.ui1_controls a {

	}
	
	.ui1_add_form_wrapper {
		text-align: center;
		white-space: nowrap;
	}
	
	.ui1_add_form_wrapper div {
		display: inline;
	}
	
/*********************************************************
 * UI2 CSS
 *********************************************************/
	.ui2_reorder {
		float: right;
		font-size: 10px;
	}

	.ui2_settingtitle {
		white-space: nowrap;
		font-size: 12px;
		font-weight: bold;
		padding: 2px;
		text-align: left;
	}
	
	.ui2_settingborder {
 		border-bottom: 1px dotted #666666;
		padding: 2px;
		margin: 2px;
 		text-align: right;
	}
	
	
	.ui2_field {
		font-size: 11px;
		border: 1px solid #666666;
	}

	.ui2_text {
		font-size: 11px;
		font-weight: normal;
	}
	
	.ui2_text_smaller {
		font-size: smaller;
	}
	
	.ui2_button {
		font-size: 12px;
		color: #000000;
		border: 1px solid #666666;
		background-color: #FFFFFF;
		margin-bottom: 5px;
		margin-right: 5px;
	}
	
	.ui2_button_disabled {
		font-size: 12px;
		color: #999999;
		border: 1px solid #aaaaaa;
		background-color: #FFFFFF;
		margin-bottom: 5px;
		margin-right: 5px;
	}
	
	.controls_bar a {
		color: #000;
		text-decoration: none;
	}
	
	.ui2_add_form_wrapper {
		text-align: center;
		white-space: nowrap;
	}
	
	.DeletePanel input.cancel_button {
		float: left;
	}
	
	.DeletePanel input.submit_button {
		float: right;
	}
	
	.DeletePanel div.info_area {
		margin-bottom: 10px;
	}
	
	.controls_bar_title {
		padding-right: 10px;
	}
	
	.selection_link {
		margin-left: 5px;
		margin-right: 3px;
	}
	
	.controls_link {
		margin-left: 3px;
		margin-right: 5px;
	}
	
/*********************************************************
 * Plugin Manager Admin CSS
 *********************************************************/
	.plugin_manager_list {
		
	}
	.plugin_manager_list td {
		vertical-align: top;
	}
	
/*********************************************************
 * Plugin History
 *********************************************************/
 	table.history_list {
 		width: 100%;
 		clear: both;
 	}
	table.history_list thead th {
		color: #777;
		background-color: #E9E9E9;
		text-align: center;
		font-weight: normal;
		padding: 5px;
	}
	
	table.history_list tbody td {
		border-bottom: 1px dotted;
		padding: 3px;
	}
	
	table.history_list tbody td.comment {
		font-size: smaller;
	}
	
	.diff_title {
		color: #777;
		background-color: #E9E9E9;
		padding: 5px;
		margin-bottom: 0px;
	}
	
	table.diff_table td.symbol {
		width: 3%;
		text-align: right;
		padding-right: 3px;
	}
	
	table.diff_table td.source {
		width: 47%;
	}
	
	table.diff_table td.diff-addedline {
		background-color: #CFC;
	}
	
	table.diff_table td.diff-deletedline {
		background-color: #FCC;
	}
	
	table.diff_table td.diff-context {
	}
	
	table.diff_table .diffchange {
		font-weight: bold;
	}
	
	table.version_compare thead th {
		white-space: nowrap;
		color: #777;
		background-color: #E9E9E9;
		padding: 5px;
		vertical-align: top;
		width: 50%;
	}
	
	table.version_compare div.version_comment {
		font-weight: normal;
		padding-top: 10px;
	}
	
	table.version_compare tbody td {
		vertical-align: top;
		border: 1px dotted #aaa;
		padding: 3px;
	}
	
/*********************************************************
 * Comments
 *********************************************************/
	div.comment_help {
		font-size: smaller;
		border: 0px;
		font-style: italic;
	}
	
/*********************************************************
 * Portal UI CSS
 *********************************************************/
	form.add_slot_form {
		font-size: smaller;
		float: right;
	}

	.portal_list_slotname {
		float: right;
		font-size: smaller;
	}

	.portal_list_site_title {
		float: left;
	}
	
	.portal_list_controls {
		text-align: right;
		clear: both;
	}
	
	.portal_list_site_description {
		float: left;
		font-size: smaller;
	}
	
	.search_status {
		text-align: center;
	}
	
	.button {
		border: 1px solid;
	}
	
	input.small {
		font-size: 10px;
		vertical-align: middle;	
		border: 1px solid;
	}
	
	ul.portal_categories {
		padding-left: 0px;
		margin-left: 0px;
		white-space: nowrap;
	}
	
	ul.portal_categories div.title {
		font-weight: bolder;
	}
	
	ul.portal_categories li {
		list-style-type: none;
		list-style-position: inside;
		margin-bottom: 15px;
		border-top: 1px dotted;
	}
	
	ul.portal_categories div.description {
		white-space: normal;
		font-size: smaller;
	}
	
	ul.portal_folders div.title {
		font-weight: normal;
	}
	
	ul.portal_categories li.current div.title {
		font-weight: bolder;
	}
	
	
	ul.portal_folders {
		margin-top: 5px;
		margin-left: 0px;
		padding-left: 30px;
	}
	
	ul.portal_folders li {
		list-style-image:  url(https://segue2.middlebury.edu//images/icons/16x16/folder_open.png);
		list-style-position: outside;
		margin-bottom: 5px;
		border: 0px;
	}

/*********************************************************
 * Dataport Styles
 *********************************************************/
	table.dataport_choose_table {
		width: 100%;
	}
	
	table.dataport_choose_table td.import_controls {
		text-align: center;
	}
	
	table.dataport_choose_table td {
		border-top: 1px dotted;
		padding-bottom: 5px;
		padding-top: 5px;
	}
	
	table.dataport_choose_table td.filled {

	}
	
	table.dataport_choose_table td.segue1slot {
		padding-right: 5px;
	}
	
	table.dataport_choose_table td.segue2slot {
		border-left: 1px dotted;
		padding-left: 5px;
		vertical-align: bottom;
	}
		
	table.dataport_choose_table td.open {
		background-color: #AFA;
	}
	
	table.dataport_choose_table div.slotname {
		float: left;
		clear: left;
		padding-left: 5px;
		font-size: 10px;
	}
	
	table.dataport_choose_table div.site_title {
		float: left;
		font-size: 10px;
	}
	
	table.dataport_choose_table div.site_info {
		float: left;

	}
	
	table.dataport_choose_table div.site_description {
		font-size: smaller;
		clear: both;
	}
	
	table.dataport_choose_table form {
		float: right;
	}
	
	table.dataport_choose_table input {
		font-size: 10px;
		border: 1px solid #555;
		background-color: transparent;
	}
	
	table.dataport_choose_table select {
		font-size: 10px;
		border: 1px solid #555;
	}
	
	

/*********************************************************
 * Site Map Styles
 *********************************************************/
	div.siteMap div.children {
		margin-left: 20px;
		clear: both;
	}
	
	div.siteMap div.current {
		font-weight: bold
	}

	div.siteMap div.header_area {
		border: 1px solid #555;
		clear: both;
		font-size: 10px;
	}
	
	div.siteMap div.header_spacer {
		clear: both;
		height: 0px;
	}

	div.siteMap div.footer_area {
		border: 1px solid #555;
		clear: both;
		font-size: 10px;
	}
	
	div.siteMap div.expandSpacer {
		float: left;
		width: 12px;
	}
	
	div.siteMap div.expand {
		float: left;
		width: 12px;
		cursor: pointer;
	}
	
	div.siteMap div.title {
		float: left;
		padding-right: 30px;
	}
	
	div.siteMap div.node {
		border-top: 1px dotted #aaa;
		clear: both;
	}
	
	div.siteMap div.description {
		font-size: 10px;
		font-weight: normal;
		color: #999999;
		padding-top: 2px;		
	}
	
	div.siteMap button {
		font-size: 9px;
		border: 1px solid #555;
		background-color: transparent;
		margin-bottom: 5px;
		margin-right: 5px;
		float: right;
	}
	
/*********************************************************
 * Tagging Styles
 *********************************************************/
	.tagging_header {
		font-size: 10px;
		margin-bottom: 5px;
		padding-bottom: 3px;
		border-bottom: 1px solid #000000;
	}

	.tag_cloud a {
		text-decoration: none;
		text-align: justify;
	}
	

	.tagging_tags_display {
		clear: both;
		font-size: 10px;
		text-align: left;
		margin-bottom: 5px;
		margin-top: 10px;
		padding-top: 3px;
		border-top: 1px dotted #aaa;

	}
	
	.tagging_options  {
		font-size: 9px;
		border-bottom: 1px dotted #aaa;
		padding-top: 2px;
		padding-bottom: 2px;
	}
	
	.tagging_options_sel  {
		font-size: 9px;
		font-weight: bold;
		border: 1px solid #aaa;
		background-color: #FFF8C6;
		padding-right: 3px;
		padding-left: 3px;
		padding-bottom: 2px;
		margin: 1px;
	}
	
	.rename_options  {
		text-align: center;
		font-size: 10px;
		border: 1px solid #aaa;
		margin-top: 10px;
		padding-top: 2px;
		padding-bottom: 2px;
	}

/*********************************************************
 * Theme Editing styles
 *********************************************************/
table.theme_advanced_table th {
	padding-top: 20px;
}

.theme_edit_step h3 {
	border-top: 1px dotted;
}

.theme_edit_step table.info_table td {
	vertical-align: top;
	padding-right: 10px;
}
.theme_edit_step table.info_table h4 {
	margin-top: 3px;
}

.theme_edit_step h4 {
	margin-bottom: 3px;
}


/*********************************************************
 * Wizard Styles
 *********************************************************/
	table.radio_matrix th {
		background-color: #aaa;
	}
	
	table.radio_matrix th.spacer {
		background-color: #f0f0f0;
	}
	
	table.radio_matrix .parent {
		background-color: #ccc;
	}
	
	table.radio_matrix .leaf {
		background-color: #f5f5f5;
	}
	
	table.radio_matrix th.option a:hover {
		cursor: help;
	}
	
	table.radio_matrix td {
		text-align: center;
	}
	
	table.search_results {
		border: 0px;
		width: 100%;
		margin-top: 10px;
	}
	table.search_results tr.search_result_item td.color0 {
		background-color: #ddd;
	}
	table.search_results tr.search_result_item td.action_button {
		text-align: right;
	}

/*********************************************************
 * Other
 *********************************************************/
	.config_error {
		margin: 5px;
		padding: 5px;
		border: 2px solid #F00;
		font-weight: bold;
		text-align: center;
	}

